--- a/index.html
+++ b/index.html
@@ -119,8 +119,11 @@
                 height="240"
                 class="team-list-items-photo"
               />
-              <h3 class="team-list-items-title">Mark Guerrero</h3>
-              <p class="team-list-items-text">Product Designer</p>
+              
+              <div class="team-list-container">
+                <h3 class="team-list-items-title">Mark Guerrero</h3>
+                <p class="team-list-items-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-list-items">
               <img
@@ -130,8 +133,10 @@
                 height="240"
                 class="team-list-items-photo"
               />
+            <div class="team-list-container"></div>
               <h3 class="team-list-items-title">Tom Ford</h3>
               <p class="team-list-items-text">Frontend Developer</p>
+            </div>
             </li>
             <li class="team-list-items">
               <img
@@ -141,8 +146,10 @@
                 height="240"
                 class="team-list-items-photo"
               />
-              <h3 class="team-list-items-title">Camila Garcia</h3>
-              <p class="team-list-items-text">Marketing</p>
+              <div class="team-list-container">
+                <h3 class="team-list-items-title">Camila Garcia</h3>
+                <p class="team-list-items-text">Marketing</p>
+              </div>
             </li>
             <li class="team-list-items">
               <img
@@ -152,8 +159,10 @@
                 height="240"
                 class="team-list-items-photo"
               />
-              <h3 class="team-list-items-title">Daniel Wilson</h3>
-              <p class="team-list-items-text">UI Designer</p>
+              <div class="team-list-container">
+                <h3 class="team-list-items-title">Daniel Wilson</h3>
+                <p class="team-list-items-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
