--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
                 alt="Mark"
                 width="264"
                 height="240"
-                class="team-list-items-photo"
-              />
+                class="team-list-items-photo"/>
               
               <div class="team-list-container">
                 <h3 class="team-list-items-title">Mark Guerrero</h3>
@@ -131,9 +130,8 @@
                 alt="Tom"
                 width="264"
                 height="240"
-                class="team-list-items-photo"
-              />
-            <div class="team-list-container"></div>
+                class="team-list-items-photo"/>
+            <div class="team-list-container">
               <h3 class="team-list-items-title">Tom Ford</h3>
               <p class="team-list-items-text">Frontend Developer</p>
             </div>
@@ -179,8 +177,10 @@
                 height="300"
                 class="portfolio-list-items-photo"
               />
-              <h3 class="portfolio-list-items-title">Banking App</h3>
-              <p class="portfolio-list-items-text">App</p>
+              <div class="portfolio-container">
+                <h3 class="portfolio-list-items-title">Banking App</h3>
+                <p class="portfolio-list-items-text">App</p>
+              </div>
             </li>
             <li>
               <img
@@ -190,8 +190,10 @@
                 height="300"
                 class="portfolio-list-items-photo"
               />
-              <h3 class="portfolio-list-items-title">Cashless Payment</h3>
-              <p class="portfolio-list-items-text">Marketing</p>
+              <div class="portfolio-container">
+                <h3 class="portfolio-list-items-title">Cashless Payment</h3>
+                <p class="portfolio-list-items-text">Marketing</p>
+              </div>
             </li>
             <li>
               <img
@@ -201,8 +203,10 @@
                 height="300"
                 class="portfolio-list-items-photo"
               />
-              <h3 class="portfolio-list-items-title">Meditation App</h3>
-              <p class="portfolio-list-items-text">App</p>
+              <div class="portfolio-container">
+                <h3 class="portfolio-list-items-title">Meditation App</h3>
+                <p class="portfolio-list-items-text">App</p>
+              </div>
             </li>
             <li>
               <img
@@ -212,8 +216,10 @@
                 height="300"
                 class="portfolio-list-items-photo"
               />
-              <h3 class="portfolio-list-items-title">Taxi Service</h3>
-              <p class="portfolio-list-items-text">Marketing</p>
+              <div class="portfolio-container">
+                <h3 class="portfolio-list-items-title">Taxi Service</h3>
+                <p class="portfolio-list-items-text">Marketing</p>
+              </div>
             </li>
             <li>
               <img
@@ -223,8 +229,10 @@
                 height="300"
                 class="portfolio-list-items-photo"
               />
-              <h3 class="portfolio-list-items-title">Screen Illustrations</h3>
-              <p class="portfolio-list-items-text">Design</p>
+              <div class="portfolio-container">
+                <h3 class="portfolio-list-items-title">Screen Illustrations</h3>
+                <p class="portfolio-list-items-text">Design</p>
+              </div>
             </li>
             <li>
               <img
@@ -234,8 +242,10 @@
                 height="300"
                 class="portfolio-list-items-photo"
               />
-              <h3 class="portfolio-list-items-title">Online Courses</h3>
-              <p class="portfolio-list-items-text">Marketing</p>
+              <div class="portfolio-container">
+                <h3 class="portfolio-list-items-title">Online Courses</h3>
+                <p class="portfolio-list-items-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
