--- a/index.html
+++ b/index.html
@@ -83,21 +83,21 @@
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="advanteges-list-items">
               <h3 class="advanteges-list-items-title">Punctuality</h3>
               <p class="advanteges-list-items-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="advanteges-list-items">
               <h3 class="advanteges-list-items-title">Diligence</h3>
               <p class="advanteges-list-items-text">
                 Research and confirm brands with the strongest digital growth
                 opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="advanteges-list-items">
               <h3 class="advanteges-list-items-title">Technologies</h3>
               <p class="advanteges-list-items-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -182,7 +182,7 @@
                 <p class="portfolio-list-items-text">App</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-list-items">
               <img
                 src="./images/qrphoto.jpg"
                 alt="qrcodephoto"
@@ -195,7 +195,7 @@
                 <p class="portfolio-list-items-text">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-list-items">
               <img
                 src="./images/gadgets.jpg"
                 alt="gadgets"
@@ -208,7 +208,7 @@
                 <p class="portfolio-list-items-text">App</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-list-items">
               <img
                 src="./images/car.jpg"
                 alt="car"
@@ -221,7 +221,7 @@
                 <p class="portfolio-list-items-text">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-list-items">
               <img
                 src="./images/phone.jpg"
                 alt="phone"
@@ -234,7 +234,7 @@
                 <p class="portfolio-list-items-text">Design</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-list-items">
               <img
                 src="./images/girl.jpg"
                 alt="gorl"
@@ -246,7 +246,7 @@
                 <h3 class="portfolio-list-items-title">Online Courses</h3>
                 <p class="portfolio-list-items-text">Marketing</p>
               </div>
-            </li>
+            </li class="portfolio-list-items">
           </ul>
         </div>
       </section>
